Fix navbar links gap

--- a/src/components/navbar/Navbar.module.scss
+++ b/src/components/navbar/Navbar.module.scss
@@ -17,12 +17,12 @@
    }
 }
 .navLinks {
-   @apply absolute xl:static top-[80px] right-0 px-3 hidden xl:flex flex-col sm:flex-row sm:justify-center lg:justify-end items-center sm:items-center w-full gap-3 lg:gap-[10px] xl:gap-[22px] text-xl lg:text-lg font-semibold text-text-1/80 sm:grid-cols-3 sm:grid-rows-2 sm:place-items-center;
+   @apply absolute xl:static top-[80px] right-0 px-3 hidden xl:flex flex-col sm:flex-row sm:justify-center lg:justify-end items-center sm:items-center w-full gap-3 lg:gap-[10px] xl:gap-[16px] text-xl lg:text-lg font-semibold text-text-1/80 sm:grid-cols-3 sm:grid-rows-2 sm:place-items-center;
    &.show {
       @apply flex sm:grid xl:flex;
    }
    a {
-      @apply underline-offset-4 hover:bg-text-1/5 rounded-inner px-3 py-2 tracking-wide transition-all;
+      @apply underline-offset-4 hover:bg-text-1/5 rounded-inner p-2 tracking-wide transition-all;
       & svg {
          @apply fill-green-500/60 w-[34px] lg:w-5 h-[34px] lg:h-5 bg-white/60 lg:bg-transparent rounded-full p-[6px] lg:p-0;
       }
